# rozofs

./: .gitignore  AboutRozoFS.html  CMakeLists.txt  InstallingRozoFS.html  README  README.md  SettingUpRozoFS.html  TODO  block_mode.txt  genindex.html  index.html  rozo_git_ref.sh  rozo_version.sh  searchindex.js
doc/: CMakeLists.txt  common.conf.5  export.conf.5  exportd.8  geocli.8  geomgr.8  geomgr.conf.5  rozo.1  rozo_quotaon.8  rozo_setquota.8  rozo_warnquota.8  rozodiag.8  rozodump.8  rozofs.7  rozofs.conf.5  rozofsmount.8  rozolauncher.8  storage.conf.5  storage_rebuild.8  storaged.8
doc/users_guide/: about_rozofs.texi  about_this_guide.texi  building_installing_configuring_rozofs.texi  copyright.texi  installing_rozofs.texi  monitoring.texi  monitoring_rozofs.texi  rozo.texi  rozofs.css  rozofs.texi  setting_up_rozofs.texi  working_with_rozofs.texi
doc/users_guide_sphinx/: AboutRozoFS.rst  Monitoring.rst  SettingUpRozoFS.rst  WorkingWithRozoFS.rst  conf.py  index.rst
manager/: CMakeLists.txt  README  platform.conf  setup.py
manager/rozofs/: __init__.py
rozofs/: CMakeLists.txt  rozofs.c  rozofs.h  rozofs_debug_ports.c  rozofs_debug_ports.h  rozofs_service_ports.c  rozofs_service_ports.h  rozofs_srv.c  rozofs_srv.h  rozofs_timer_conf.c  rozofs_timer_conf.h
rozofs/common/: common_config.c  common_config.h  daemon.c  daemon.h  dist.h  exp_trck_inode_srv_v2.c  export_track.h  export_track_change.c  export_track_change.h  geo_replica_str.h  htable.c  htable.h  list.h  log.h  mattr.c  mattr.h  mojette_transform128.c  profile.h  rozofs_site.c  rozofs_site.h  tags  transform.c  transform.h  types.h  xmalloc.c  xmalloc.h
rozofs/core/: README  af_inet_stream_api.h  af_inet_tcp.c  af_unix_ctx_mgt.c  af_unix_socket_client_generic.c  af_unix_socket_generic.c  af_unix_socket_generic.h  af_unix_socket_generic_api.h  af_unix_socket_recv.c  af_unix_socket_rpc_stream_recv.c  af_unix_socket_send.c  af_unix_socket_server_generic.c  af_unix_socket_stream_recv.c  af_unix_socket_stream_send.c  af_unix_test.h  com_cache.c  com_cache.h  com_tx_timer.c  com_tx_timer.h  com_tx_timer_api.h  dbgScript_api.h  disk_table_service.c  disk_table_service.h  expgw_common.c  expgw_common.h  malloc_tracking.c  malloc_tracking.h  monitoring.c  monitoring.h  norh_lbg_timer.c  north_lbg.h  north_lbg_api.h  north_lbg_timer.h  north_lbg_timer_api.h  north_load_balancer.c  north_load_balancer_api.c  ppu_trace.h  rozo_launcher.h  rozofs_core_files.c  rozofs_core_files.h  (+64 more)
rozofs/rpc/: eclient.c  eclient.h  eclient_reload.c  epclient.c  epclient.h  epproto.h  epproto.x  epprotoclt.c  epprotosvc.c  epprotoxdr.c  eproto.h  eproto.x  eprotoclt.c  eprotosvc.c  eprotoxdr.c  export_lbg.c  export_profiler.h  geo_replica_proto.h  geo_replica_proto.x  geo_replica_protoclt.c  geo_replica_protosvc.c  geo_replica_protoxdr.c  gwproto.h  gwproto.x  gwproto_cache.h  gwprotoclt.c  gwprotosvc.c  gwprotoxdr.c  mclient.c  mclient.h  mclient_reload.c  mpclient.c  mpclient.h  mpproto.h  mpproto.x  mpprotoclt.c  mpprotosvc.c  mpprotoxdr.c  mproto.h  mproto.x  (+34 more)
src/: CMakeLists.txt  cache.c  cache.h  daemon.c  dirent_cache.c  dirent_file.c  dirent_file_repair.c  dirent_insert.c  dirent_journal.h  dirent_search.c  dist.h  econfig.c  econfig.h  eproto.c  eproto.h  eproto.x  eprotoclt.c  eprotosvc.c  eprotoxdr.c  export.c  export.h  exportclt.c  exportclt.h  exportd.c  exportd.h  file.c  file.h  htable.c  log.h  mattr.h  mclient.c  mclient.h  mdir.c  mdir.h  mdirent.c  mdirent_vers1.c  mdirent_vers1.h  mdirent_vers2.h  monitor.c  monitor.h  (+35 more)
src/debug/: CMakeLists.txt  debug.c
src/exportd/: CMakeLists.txt  acl.h  cache.c  cache.h  dirent_cache.c  dirent_enum2String_file_repair_cause_e.h  dirent_file.c  dirent_file_repair.c  dirent_insert.c  dirent_journal.h  dirent_search.c  dirent_writeback_cache.c  dirent_writeback_cache.h  econfig.c  econfig.h  epproto.c  eproto.c  eproto_nb.c  eproto_nb.h  eprotosvc_nb.c  eprotosvc_nb.h  errcode_bitmap.h  exp_cache.c  exp_cache.h  exp_cache_dirty_mgt.c  exp_path_resolve.c  expgw_attr.c  expgw_attr_cache.c  expgw_attr_cache.h  expgw_common.c  expgw_create_dir_file.c  expgw_delete_dir_file.c  expgw_eprotosvc.c  expgw_export.h  expgw_exportd_north_intf.c  expgw_fid_cache.c  expgw_fid_cache.h  expgw_gw_poll.c  expgw_gwprotosvc.c  expgw_gwprotosvc.h  (+97 more)
src/geocli/: CMakeLists.txt  TAGS  file.h  geocli_file_copy.c  geocli_killer.sh  geocli_lbg.c  geocli_read.c  geocli_srv.c  geocli_srv.h  geomgr.c  geomgr.h  geomgr_config.c  geomgr_config.h  geomgr_starter.sh  rozofs_non_blocking_main.c  rozofs_rw_load_balancing.c  rozofs_sharedmem.c  rozofs_sharedmem.h  rozofs_tx_client_export.c  rozofsmount.c  rozofsmount.h  rzcp_copy.c  rzcp_copy.h  rzcp_file_ctx.c  rzcp_file_ctx.h  rzcp_read.c  rzcp_remove.c  rzcp_write.c  tags
src/launcher/: CMakeLists.txt  rozofs.conf  rozolauncher.c
src/profile/: CMakeLists.txt  rprofile.c
src/rozodebug/: CMakeLists.txt  rozodebug.c
src/rozodiag/: CMakeLists.txt  rozodiag.c
src/rozofsmount/: CMakeLists.txt  file.c  file.h  mpproto.c  rozofs_attr.c  rozofs_cache.c  rozofs_cache.h  rozofs_create.c  rozofs_export_cnx_supervision.c  rozofs_export_gateway_conf_non_blocking.c  rozofs_export_gateway_conf_non_blocking.h  rozofs_file_lock.c  rozofs_file_read_write.c  rozofs_fuse.c  rozofs_fuse.h  rozofs_fuse_api.h  rozofs_fuse_thread.c  rozofs_fuse_thread_intf.c  rozofs_fuse_thread_intf.h  rozofs_link.c  rozofs_lookup.c  rozofs_mkdir.c  rozofs_mknod.c  rozofs_modeblock_cache.c  rozofs_modeblock_cache.h  (+23 more)
tests/: CMakeLists.txt  IT.py  IT.sh  bonnie.sh  cnf.py  conf_local_addr.sh  cp.sh  dbg.sh  dd.sh  display_array.py  env.sh  env_nb.sh  fdtree.sh  fileop.sh  fileop_plot.sh  gnu3d.dem  gnuplot_fileop.dem  ifconfig.txt  iozone.sh  iozone_plot.sh  layout.py  monitor.py  pjdtest.sh  random_iozone.sh  rbs_stub.c  read_dirent_file.c  read_parallel.c  read_prj_blocks.c  read_prj_blocks.sh  read_storage.c  rozofs_xattr.c  rpc_throughput.h  rpc_throughput_client.c  rpc_throughput_server.c  rpc_throughputclt.c  rpc_throughputsvc.c  rpc_throughputxdr.c  rsync.sh  runtests.sh  rw.c  (+42 more)
(+341 files in other folders)
